--- a/.gitignore
+++ b/.gitignore
@@ -129,16 +129,4 @@ dmypy.json
 .pyre/
 
 # Idea files
-.idea
-.idea/
-/.idea/
-.idea/.gitignore
-.idea/dataSources.local.xml
-.idea/inspectionProfiles
-.idea/dataSources
-.idea/dataSources.xml
-.idea/modules.xml
-.idea/misc.xml
-.idea/workspace.xml
-.idea/Photography-Website.iml
-.idea/vcs.xml
+.idea/*
