--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ certifi==2020.12.5
 chardet==4.0.0
 cleo==0.8.1
 clikit==0.6.2
+coreapi==2.3.3
+coreschema==0.0.4
 crashtest==0.3.1
 cycler==0.10.0
 distlib==0.3.1
@@ -14,14 +16,19 @@ Django==3.1.3
 django-bootstrap4==2.3.1
 django-filter==2.4.0
 djangorestframework==3.12.4
+drf-yasg==1.20.0
 filelock==3.0.12
 html5lib==1.1
 idna==2.10
 imaplib2==2.45.0
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==2.11.3
 keyring==21.8.0
 kiwisolver==1.3.1
 lockfile==0.12.2
 Markdown==3.3.4
+MarkupSafe==1.1.1
 matplotlib==3.3.3
 msgpack==1.0.2
 numpy==1.19.3
@@ -43,11 +50,14 @@ pytz==2020.4
 pywin32-ctypes==0.2.0
 requests==2.25.1
 requests-toolbelt==0.9.1
+ruamel.yaml==0.17.4
+ruamel.yaml.clib==0.2.2
 shellingham==1.4.0
 six==1.15.0
 soupsieve==2.0.1
 sqlparse==0.4.1
 tomlkit==0.7.0
+uritemplate==3.0.1
 urllib3==1.26.4
 virtualenv==20.4.3
 webencodings==0.5.1
